Updated show activities for issues, fixed error edit issue and new create and edit issue from token
